2005-01-11  Luca Ferretti  <elle.uca@libero.it>

	* src/favorites.c: (create_tree), (create_blacklist_dialog):
	* src/memmaps.c: (create_single_memmaps_dialog):
	* src/procdialogs.c: (create_proc_field_page),
	(procdialog_create_preferences_dialog):
	* src/proctable.c: (proctable_search_table):
	
	* Use new GtkMessageDialog API and HIG compliant labels for
	search-not-found alert.

	* Fix spacing, labels and shadows in Memory Maps and Hidden Processes
	dialogs

	* Add header label (with mnemonic) for the fields list in Preferences
	dialog.

2005-01-10  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: 2.9.5
	* po/POTFILES.in: Added openfiles.c.
	
	* src/interface.c: UI fix.
	
	* src/openfiles.c: (create_openfiles_tree): Fixed i18n.

2005-01-10  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS:
	* configure.in: Released 2.9.4.

2005-01-10  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in:
	* src/Makefile.am:
	* src/callbacks.c: (cb_show_open_files),
	(popup_menu_show_open_files):
	* src/callbacks.h:
	* src/interface.c:
	* src/openfiles.c: (get_type_name), (add_new_files),
	(classify_openfiles), (compare_open_files),
	(update_openfiles_dialog), (close_openfiles_dialog),
	(create_openfiles_tree), (openfiles_timer),
	(create_single_openfiles_dialog), (create_openfiles_dialog):
	* src/openfiles.h:
	
	Patch from nick@reloco.com.ar.
	Closes #147193.

2005-01-09  Benoît Dejean  <TazForEver@dlfp.org>

	* src/gnome-system-monitor.schemas.in: Fixed. Closes #163391.

2005-01-09  Benoît Dejean  <TazForEver@dlfp.org>

	* src/interface.c: Fixed typo. Closes #163393.
	Closes #163394.

2005-01-08  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in:
	* src/procdialogs.c: (procdialog_create_root_password_dialog):
	* src/util.c: (_procman_array_gettext_init):
	* src/util.h: Now uses libgnomesu.

2005-01-08  Luca Ferretti <elle.uca@libero.it>

	* src/favorites.c: (create_blacklist_dialog):
	* src/interface.c: (create_proc_view), (create_main_window),