@@ -1,3 +1,10 @@
+2005-01-12  Martin Ejdestig  <mejde@dtek.chalmers.se>
+  
+ 	* load-graph.c (load_graph_draw): Fixed drawing of graph (was off by a
+	few pixels here and there).
+
+	Closes #163745.
+
 2005-01-11  Luca Ferretti  <elle.uca@libero.it>
 
 	* src/favorites.c: (create_tree), (create_blacklist_dialog):
